[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
requests = "^2.27.1"
discord = "^1.7.3"
Flask = "^2.1.1"
googletrans = "^3.1.0a0"
gTTS = "^2.2.4"
mutagen = "^1.45.1"
black = "^22.3.0"
"discord.ext" = "^0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"